--- a/app/src/styles/styles.css
+++ b/app/src/styles/styles.css
@@ -1,1 +1,12 @@
+@import "normalize.css";
+@import "base/_global";
+@import "modules/_input";
+@import "modules/_racetrack";
+@import "modules/_raceInfoContainer";
+
+
+
+
+
+
 
